tests/harness/errors/192_1tkk_7_9_function_not_block.eu
add(x, y): x + y
result: add(1) + 1
